syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "StudentCommands.EventHistory";

service EventHistory {
  rpc GetEvents(GetEventsRequest) returns (Response);
}

message GetEventsRequest {
  int32 current_page = 1;
  int32 page_size = 2;
}

message Response {
  repeated EventMessage events = 1;
}

message EventMessage{
  string aggregate_id  = 1;
  int32 sequence = 2;
  string type = 3;
  string data = 4;
  google.protobuf.Timestamp date_time = 5;
  int32 version = 6;
}